--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,9 @@ list-style: none;
 /* li:before {
   content: '- ';
 } */
-
+img.img-fluid.mr-3 {
+  border-radius: 40%;
+}
 
 /* ============================= */
 html {
@@ -1481,13 +1483,13 @@ h1, h2, h3, h4, h5,
 .service-1 {
   text-align: center; }
   .service-1 .service-1-icon {
-    background: #dc3545;
+    /* background: #dc3545; */
     width: 90px;
     height: 90px;
     margin-bottom: 20px;
     position: relative;
     display: inline-block;
-    border: 4px solid #dc3545;
+    /* border: 4px solid #dc3545; */
     border-radius: 50%;
     color: #fff; }
     .service-1 .service-1-icon > span {
