--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,9 @@ img.img-fluid.mr-3 {
   display: flex;
   height: 21pc;
 }
+.testimonial-2 {
+  height: 12pc;
+}
 
 
 /* ============================= */
