--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ list-style: none;
   
 }
 img.img-fluid.mr-3 {
-  border-radius: 40%;
+  border-radius: 50%;
 }
 .post-entry-1-contents {
   display: flex;
@@ -1414,7 +1414,7 @@ h1, h2, h3, h4, h5,
   overflow: hidden;
   background: #fff; }
   .item-1 .item-1-contents {
-    padding: 30px;
+    padding: 20px;
     border: 1px solid #ccc;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
@@ -1437,17 +1437,17 @@ h1, h2, h3, h4, h5,
           text-align: right; }
     .item-1 .item-1-contents h3 {
       position: relative;
-      color: #dc3545;
+      color: #0c31cd;
       padding-bottom: 30px;
       margin-bottom: 30px; }
-      .item-1 .item-1-contents h3:after {
+      /* .item-1 .item-1-contents h3:after {
         left: 0;
         bottom: 0;
         content: "";
         width: 40px;
         height: 2px;
-        background: #dc3545;
-        position: absolute; }
+        background: #0c31cd;
+        position: absolute; } */
 
 .how-it-works .step {
   width: 20%;
