--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,9 @@ img.img-fluid.mr-3 {
 .d-flex.v-card.align-items-center.mb-4 {
   height: 50px;
 }
+/* =======[calender]================ */
+
+
 
 /* ============================= */
 html {
@@ -487,6 +490,8 @@ h1, h2, h3, h4, h5,
     padding: 0;
     font-size: 1.7rem; }
     .site-navbar .site-logo a {
+      font-family: 'Crimson Text', serif;
+
       text-transform: uppercase;
       color: #fff; }
     @media (max-width: 991.98px) {
