--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,8 @@ list-style: none;
   
 }
 .img-fluid1 {
-max-width:21%;
+/* max-width:21%; */
+width: 11pc;
 }
 img.img-fluid.mr-3 {
   border-radius: 50%;
